--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,12 +3,30 @@ version: '3.8'
 services:
   postgres:
     image: postgres:latest
-    container_name: postgres_container
+    container_name: postgres_disponibilidade_SSL
     environment:
       POSTGRES_USER: user
       POSTGRES_PASSWORD: 123456789
       POSTGRES_DB: monitoramento_aplicacoes
+      TZ: America/Sao_Paulo
     ports:
       - "5432:5432"
     volumes:
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+      - postgres_disponibilidade_SSL:/var/lib/postgresql/postgres_data
+
+  grafana:
+    image: grafana/grafana:latest
+    container_name: grafana_disponibilidade_SSL
+    ports:
+      - "3000:3000"
+    environment:
+      - GF_SECURITY_ADMIN_PASSWORD=admin
+    depends_on:
+      - postgres
+    volumes:
+      - grafana_disponibilidade_SSL:/var/lib/grafana
+
+volumes:
+  postgres_disponibilidade_SSL:
+  grafana_disponibilidade_SSL:
