--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,11 @@
-version: '3.8'
-
 services:
   postgres:
     image: postgres:latest
     container_name: postgres_disponibilidade_SSL
     environment:
-      POSTGRES_USER: user
-      POSTGRES_PASSWORD: 123456789
-      POSTGRES_DB: monitoramento_aplicacoes
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_DB: ${POSTGRES_DB}
       TZ: America/Sao_Paulo
     ports:
       - "5432:5432"
@@ -21,11 +19,27 @@ services:
     ports:
       - "3000:3000"
     environment:
-      - GF_SECURITY_ADMIN_PASSWORD=admin
+      - GF_SECURITY_ADMIN_PASSWORD=${GF_SECURITY_ADMIN_PASSWORD}
     depends_on:
       - postgres
     volumes:
       - grafana_disponibilidade_SSL:/var/lib/grafana
+
+  python_app:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: python_app
+    environment:
+      DB_NAME: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
+      DB_HOST: ${DB_HOST}
+      DB_PORT: ${DB_PORT}
+    depends_on:
+      - postgres
+    volumes:
+      - .:/app
 
 volumes:
   postgres_disponibilidade_SSL:
