Ajustando o compose para rodar os scripts python assim que subit o sistema e atualizando os dominios do arquivo json

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -40,6 +40,7 @@ services:
       - postgres
     volumes:
       - .:/app
+    command: ["python3", "/app/executar_testes.py"]
 
 volumes:
   postgres_disponibilidade_SSL:
