--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    container_name: python_app
+    container_name: python_app_testes_disponibilidade_SSL
     environment:
       DB_NAME: ${DB_NAME}
       DB_USER: ${DB_USER}
